<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.setup.SetupCredentialsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="50dp"
        android:paddingBottom="@dimen/space_xxl">

        <TextView
            android:id="@+id/setup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="@string/setup_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_display"
            android:textStyle="bold" />

        <!-- labelFor не задаётся у полей с hint: lint (LabelFor) требует
             что-то одно, иначе TalkBack читает подпись дважды -->
        <TextView
            android:id="@+id/address_label"
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_address_label"
            android:textSize="@dimen/text_row_title" />

        <EditText
            android:id="@+id/setup_address_input"
            style="@style/Widget.Cloudimny.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/setup_address_hint"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/username_label"
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/setup_username_label"
            android:textSize="@dimen/text_row_title" />

        <EditText
            android:id="@+id/setup_username_input"
            style="@style/Widget.Cloudimny.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/setup_username_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/setup_auth_label"
            android:textSize="@dimen/text_row_title" />

        <RadioGroup
            android:id="@+id/setup_auth_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/setup_auth_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/setup_auth_password"
                android:textColor="?attr/colorOnBackground" />

            <RadioButton
                android:id="@+id/setup_auth_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xl"
                android:text="@string/setup_auth_key"
                android:textColor="?attr/colorOnBackground" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/setup_key_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/Widget.Cloudimny.Text.FieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xl"
                android:text="@string/setup_key_label"
                android:textSize="@dimen/text_row_title" />

            <EditText
                android:id="@+id/setup_key_input"
                style="@style/Widget.Cloudimny.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:gravity="top|start"
                android:hint="@string/setup_key_input_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textNoSuggestions"
                android:minLines="5"
                android:textSize="@dimen/text_caption" />

            <TextView
                style="@style/Widget.Cloudimny.Text.Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/setup_key_description" />

        </LinearLayout>

        <TextView
            android:id="@+id/password_label"
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:labelFor="@id/setup_password_input"
            android:text="@string/setup_password_label"
            android:textSize="@dimen/text_row_title" />

        <EditText
            android:id="@+id/setup_password_input"
            style="@style/Widget.Cloudimny.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/setup_sudo_password_description"
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/setup_sudo_password_description"
            android:visibility="gone" />

        <Button
            android:id="@+id/setup_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/setup_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/space_xxl"
            android:background="@color/divider" />

        <TextView
            style="@style/Widget.Cloudimny.Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_import_section" />

        <TextView
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/setup_import_description" />

        <Button
            android:id="@+id/setup_import_button"
            style="@style/Widget.Cloudimny.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/setup_import_button" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
