<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/screen_padding_horizontal"
        android:paddingTop="@dimen/space_s"
        android:paddingBottom="@dimen/space_xxl">

        <TextView
            style="@style/Widget.Cloudimny.Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_address_section" />

        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/settings_address_label"
            android:textSize="@dimen/text_row_title" />

        <EditText
            android:id="@+id/server_address_input"
            style="@style/Widget.Cloudimny.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/settings_address_hint"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/server_address_warning"
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/settings_address_warning" />

        <Button
            android:id="@+id/server_address_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:enabled="false"
            android:text="@string/settings_address_apply" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/space_xxl"
            android:background="@color/divider" />

        <TextView
            style="@style/Widget.Cloudimny.Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_cache_section" />

        <TextView
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/settings_cache_description" />

        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/settings_cache_tracks_label"
            android:textSize="@dimen/text_row_title" />

        <com.google.android.material.slider.Slider
            android:id="@+id/track_cache_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            app:thumbColor="?attr/colorPrimary"
            app:trackColorActive="?attr/colorPrimary" />

        <TextView
            android:id="@+id/track_cache_value"
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/text_row_title" />

        <TextView
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/settings_cache_tracks_restart" />

        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/settings_cache_covers_label"
            android:textSize="@dimen/text_row_title" />

        <com.google.android.material.slider.Slider
            android:id="@+id/cover_cache_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            app:thumbColor="?attr/colorPrimary"
            app:trackColorActive="?attr/colorPrimary" />

        <TextView
            android:id="@+id/cover_cache_value"
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/text_row_title" />

        <TextView
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/settings_cache_covers_immediate" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/space_xxl"
            android:background="@color/divider" />

        <TextView
            style="@style/Widget.Cloudimny.Text.SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_export_section" />

        <TextView
            style="@style/Widget.Cloudimny.Text.Hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/settings_export_description" />

        <Button
            android:id="@+id/export_server_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/settings_export_button" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
