<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/player_padding_horizontal"
    android:paddingTop="@dimen/space_xxxl"
    tools:context=".views.upload.UploadTrackFragment">

    <Button
        android:id="@+id/choose_file_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/choose_file_button" />

    <TextView
        android:id="@+id/chosen_file_name"
        style="@style/Widget.Cloudimny.Text.Hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:ellipsize="middle"
        android:maxLines="1"
        android:text="@string/no_file_chosen" />

    <TextView
        style="@style/Widget.Cloudimny.Text.FieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:labelFor="@id/track_title_input"
        android:text="@string/track_title_label" />

    <EditText
        android:id="@+id/track_title_input"
        style="@style/Widget.Cloudimny.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        style="@style/Widget.Cloudimny.Text.FieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:labelFor="@id/track_artist_input"
        android:text="@string/track_artist_label" />

    <EditText
        android:id="@+id/track_artist_input"
        style="@style/Widget.Cloudimny.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxxl"
        android:enabled="false"
        android:text="@string/upload_button" />

</LinearLayout>
