<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.playlist.CreatePlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/player_padding_horizontal"
        android:paddingTop="@dimen/space_xxxl"
        android:paddingBottom="@dimen/space_xxl">

        <!-- labelFor не задаётся: у поля есть hint, и lint (LabelFor)
             требует что-то одно, иначе TalkBack прочитает подпись дважды -->
        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name_label" />

        <EditText
            android:id="@+id/playlist_name_input"
            style="@style/Widget.Cloudimny.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:hint="@string/playlist_name_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            style="@style/Widget.Cloudimny.Text.FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxl"
            android:text="@string/playlist_tracks_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectable_tracks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_track_checkable" />

        <Button
            android:id="@+id/create_playlist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxxl"
            android:enabled="false"
            android:text="@string/create_button" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
